<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">
    <!-- Title -->

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="120sp"
        android:fontFamily="@font/pokemon_solid"
        android:text="@string/start_button"
        android:textColor="@color/pokeBlue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/highscores"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_name" />

    <Button
        android:id="@+id/highscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_solid"
        android:onClick="startGame"
        android:text="@string/highscores_button"
        android:textColor="@color/pokeBlue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/start_button"
        app:layout_constraintTop_toBottomOf="@+id/player_name2" />

    <CheckBox
        android:id="@+id/is_hard_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard_mode"
        app:layout_constraintEnd_toEndOf="@+id/start_button"
        app:layout_constraintStart_toStartOf="@+id/start_button"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />

    <EditText
        android:id="@+id/player_name"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:autofillHints="@string/name_hint"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:text="@string/player1"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/player_name2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainPikachu" />

    <FrameLayout
        android:id="@+id/whack_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/game_title"
            android:textAlignment="center"
            android:textColor="@color/pokeYellow"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textViewShadowId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/game_title"
            android:textAlignment="center"
            android:textColor="@color/pokeBlue"
            android:textSize="40sp" />
    </FrameLayout>

    <ImageView
        android:id="@+id/mainPikachu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/pikachu_description"
        android:cropToPadding="true"
        android:src="@drawable/main_pikachu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whack_title" />

    <TextView
        android:id="@+id/player_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/player_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/player_name"
        app:layout_constraintLeft_toLeftOf="@+id/mainPikachu"
        app:layout_constraintRight_toLeftOf="@id/player_name"
        app:layout_constraintTop_toTopOf="@+id/player_name" />

    <TextView
        android:id="@+id/beware_haunter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_hollow"
        android:rotation="-45"
        android:text="@string/beware_of_haunter"
        android:textColor="@color/pokeBlue"
        android:textSize="22sp"
        android:textStyle="bold"
        android:translationX="-48dp"
        app:layout_constraintBottom_toBottomOf="@+id/mainPikachu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mainPikachu"
        app:layout_constraintTop_toTopOf="@+id/mainPikachu"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Pikachu Gif -->
    <!-- Enter Player Name -->

    <!-- Start Button (WHACK IT) -->

</androidx.constraintlayout.widget.ConstraintLayout>