<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/pokeBlue"
    android:gravity="center">

    <TextView
        android:id="@+id/lose_view_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:fontFamily="@font/pokemon_solid"
        android:text="@string/lose"
        android:textColor="@color/pokeYellow"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/run_pikachu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lose_view_upper"
        android:adjustViewBounds="true"
        android:cropToPadding="true"/>

    <TextView
        android:id="@+id/lose_view_lower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/run_pikachu"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:fontFamily="@font/pokemon_solid"
        android:text="@string/lose_happy"
        android:textColor="@color/pokeYellow"
        android:textSize="26sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lose_view_lower"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <Button
            android:id="@+id/play_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/play_again"
            android:textColor="@color/pokeBlue"
            android:textSize="26sp" />

        <Button
            android:id="@+id/back_to_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play_again_button"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/back_to_menu"
            android:textColor="@color/pokeBlue"
            android:textSize="20sp" />
    </RelativeLayout>
</RelativeLayout>
